--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -76,7 +76,10 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
+												//- img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
+												img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+												img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
+												img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 											div.number
 												p 1
 											div.manager-thumbnail-name
@@ -139,7 +142,10 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
+													//- img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
+													img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+													img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
+													img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 													div.manager-image-inner
 														div.number
 															p 1
@@ -159,7 +165,7 @@ div.tab-content(id="top5-manager-content")
 																	div.row 
 																		div.col-10
 																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
 																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
 																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 														.row
@@ -261,7 +267,7 @@ div.tab-content(id="top5-manager-content")
 																	div.row 
 																		div.col-10
 																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
 																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
 																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
@@ -344,7 +350,10 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
+													//- img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
+													img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+													img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+													img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 													div.manager-image-inner
 														div.number
 															p 3
@@ -364,7 +373,7 @@ div.tab-content(id="top5-manager-content")
 																	div.row 
 																		div.col-10
 																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
 																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
 																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
@@ -467,7 +476,7 @@ div.tab-content(id="top5-manager-content")
 																	div.row 
 																		div.col-10
 																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
 																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
 																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
@@ -570,7 +579,7 @@ div.tab-content(id="top5-manager-content")
 																	div.row 
 																		div.col-10
 																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
 																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
 																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
