--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -76,10 +76,11 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												//- img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
-												img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
-												img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
-												img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
+												div.helmet-container
+													img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+													div.oval-letter
+														img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
+														img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 											div.number
 												p 1
 											div.manager-thumbnail-name
@@ -127,7 +128,11 @@ div.tab-content(id="top5-manager-content")
 									div.menu-item.top-5
 										div.players 
 											#top5-managers-nav(style='display: block;')
-												img#top-manager-nav(src='assets/img/white-helmet.png', style='display: block;')
+												div.helmet-container
+													img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+													div.oval-letter
+														img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
+														img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 											div.number
 												p 5
 											div.manager-thumbnail-name
@@ -139,7 +144,7 @@ div.tab-content(id="top5-manager-content")
 							div.carousel-item.active
 								div.tab-content
 									div.tab-pane.active(id="manager1" role="tabpanel")
-										div.row.player
+										div.row
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
 													//- img#top-manager(src='assets/img/white-helmet.png', style='display: block;'  class="img-fluid")
